--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+vioserial/.cxx/Debug
+vioserial/.cxx/tools/debug
+.idea*
+vioserial/.cxx/ndk_locator_record*
